Complete unit tests and add CompleteTasksHandler.